# naja-if

./: README.md  REUSE.toml
.github/worflows/: ubuntu-cpp-build.yml
.github/workflows/: asan-build.yml  asan-cpp-build.yml  macos-cpp-build.yml  ubuntu-cpp-build.yml
.reuse/: REUSE.toml
c++/: CMakeLists.txt
c++/test/: NajaIFTest0.cpp
